tests/snapshots/transcript__tools-32.snap
---
source: tests/transcript.rs
expression: "rendered(TOOLS, 32)"
---
▎ you
▎ tidy the deflector array and
▎ fetch the spec

▎ claude · opus-5
▎ Editing the coil table first,
▎ then writing the new module,
▎ then the spec.
▎
▎ ▸ Edit
▎   └ src/engine/deflector.rs ·…
▎ ▸ Write
▎   └ src/engine/coil.rs · 2 hu…
▎ ▸ WebFetch
▎   └ https://holodeck.invalid/…
▎ ▸ jeffries · beam_status
▎   └ {"deck":9,"verbose":true}
▎ ▸ Replicator
▎   └ tea, earl grey, hot
▎ ▸ Read                  failed
▎   └ {"file_path": "/Users/fix…
▎ ▸ Bash                  denied
▎   └ rm -rf target
▎ ▸ Bash             interrupted
▎   └ cargo test -- --nocapture
▎
▎ Stopping there. One call was
▎ still in flight when the
▎ session ended.
▎
▎ ▸ Bash                 pending
▎   └ cargo build --release
