tests/snapshots/transcript__tools-80.snap
---
source: tests/transcript.rs
expression: "rendered(TOOLS, 80)"
---
▎ you
▎ tidy the deflector array and fetch the spec

▎ claude · opus-5
▎ Editing the coil table first, then writing the new module, then the spec.
▎
▎ ▸ Edit
▎   └ src/engine/deflector.rs · 1 hunk
▎ ▸ Write
▎   └ src/engine/coil.rs · 2 hunks
▎ ▸ WebFetch
▎   └ https://holodeck.invalid/specs/deflector.html
▎ ▸ jeffries · beam_status
▎   └ {"deck":9,"verbose":true}
▎ ▸ Replicator
▎   └ tea, earl grey, hot
▎ ▸ Read
▎   └ src/engine/grid.rs · 212 lines
▎   └ src/engine/coil.rs · 64 lines
▎   └ src/engine/deflector.rs · 148 lines
▎ ▸ Read                                                                  failed
▎   └ {"file_path": "/Users/fixture/Developer/holodeck/src/engine/co
▎ ▸ Bash                                                                  denied
▎   └ rm -rf target
▎ ▸ Bash                                                             interrupted
▎   └ cargo test -- --nocapture
▎
▎ Stopping there. One call was still in flight when the session ended.
▎
▎ ▸ Bash                                                                 pending
▎   └ cargo build --release
