tests/snapshots/transcript__tools-expanded-32.snap
---
source: tests/transcript.rs
expression: "expanded(TOOLS, 32)"
---
▎ you
▎ tidy the deflector array and
▎ fetch the spec

▎ claude · opus-5
▎ Editing the coil table first,
▎ then writing the new module,
▎ then the spec.
▎
▎ ▾ Edit
▎   └ src/engine/deflector.rs ·…
▎   ┃ file_path      /Users/fix…
▎   ┃ new_string     const COIL…
▎   ┃ old_string     const COIL…
▎   ┃ replace_all    false
▎   ┃
▎   ┃ @@ -14,5 +14,5 @@
▎   ┃  use crate::engine::grid:…
▎   ┃
▎   ┃ -const COILS: usize = 8;
▎   ┃ +const COILS: usize = 12;
▎   ┃
▎   ┃  pub struct Deflector {
▎
▎ ▾ Write
▎   └ src/engine/coil.rs · 2 hu…
▎   ┃ content        //! One de…
▎   ┃ file_path      /Users/fix…
▎   ┃
▎   ┃ @@ -1,0 +1,3 @@
▎   ┃ +//! One deflector coil.
▎   ┃ +
▎   ┃ +pub struct Coil {
▎   ┃ @@ -1,0 +4,2 @@
▎   ┃ +    pub gain: f32,
▎   ┃ +}
▎
▎ ▾ WebFetch
▎   └ https://holodeck.invalid/…
▎   ┃ prompt         What is th…
▎   ┃ url            https://ho…
▎   ┃
▎   ┃ The spec puts the maximum…
▎
▎ ▾ jeffries · beam_status
▎   └ {"deck":9,"verbose":true}
▎   ┃ deck           9
▎   ┃ verbose        true
▎   ┃
▎   ┃ Deck 9 emitter array nomi…
▎
▎ ▾ Replicator
▎   └ tea, earl grey, hot
▎   ┃ pattern        tea, earl …
▎   ┃ quantity       1
▎   ┃
▎   ┃ Replicated 1 item.
▎
▎ ▾ Read
▎   └ src/engine/grid.rs · 212 …
▎   ┃ file_path      /Users/fix…
▎   ┃
▎   ┃ //! The holodeck grid sca…
▎
▎ ▾ Read
▎   └ src/engine/coil.rs · 64 l…
▎   ┃ file_path      /Users/fix…
▎   ┃
▎   ┃ //! One deflector coil.
▎
▎ ▾ Read
▎   └ src/engine/deflector.rs ·…
▎   ┃ file_path      /Users/fix…
▎   ┃
▎   ┃ //! The deflector array.
▎
▎ ▾ Read                  failed
▎   └ {"file_path": "/Users/fix…
▎   ┃ __unparsedToo… {"file_pat…
▎   ┃
▎   ┃ <tool_use_error>InputVali…
▎
▎ ▾ Bash                  denied
▎   └ rm -rf target
▎   ┃ command        rm -rf tar…
▎   ┃ description    Clear the …
▎   ┃
▎   ┃ The user doesn't want to …
▎
▎ ▾ Bash             interrupted
▎   └ cargo test -- --nocapture
▎   ┃ command        cargo test…
▎   ┃ description    Run the de…
▎   ┃
▎   ┃ [Request interrupted by u…
▎
▎ Stopping there. One call was
▎ still in flight when the
▎ session ended.
▎
▎ ▾ Bash                 pending
▎   └ cargo build --release
▎   ┃ command        cargo buil…
▎   ┃ description    Release bu…
