tests/snapshots/transcript__tools-expanded-80.snap
---
source: tests/transcript.rs
expression: "expanded(TOOLS, 80)"
---
▎ you
▎ tidy the deflector array and fetch the spec

▎ claude · opus-5
▎ Editing the coil table first, then writing the new module, then the spec.
▎
▎ ▾ Edit                                                                      ok
▎   └ src/engine/deflector.rs · 1 hunk
▎   ┃ file_path      /Users/fixture/Developer/holodeck/src/engine/deflector.rs
▎   ┃ new_string     const COILS: usize = 12;
▎   ┃ old_string     const COILS: usize = 8;
▎   ┃ replace_all    false
▎   ┃
▎   ┃ @@ -14,5 +14,5 @@
▎   ┃  use crate::engine::grid::Cell;
▎   ┃
▎   ┃ -const COILS: usize = 8;
▎   ┃ +const COILS: usize = 12;
▎   ┃
▎   ┃  pub struct Deflector {
▎
▎ ▾ Write                                                                     ok
▎   └ src/engine/coil.rs · 2 hunks
▎   ┃ content        //! One deflector coil.  pub struct Coil {     pub gain: f…
▎   ┃ file_path      /Users/fixture/Developer/holodeck/src/engine/coil.rs
▎   ┃
▎   ┃ @@ -1,0 +1,3 @@
▎   ┃ +//! One deflector coil.
▎   ┃ +
▎   ┃ +pub struct Coil {
▎   ┃ @@ -1,0 +4,2 @@
▎   ┃ +    pub gain: f32,
▎   ┃ +}
▎
▎ ▾ WebFetch                                                                  ok
▎   └ https://holodeck.invalid/specs/deflector.html
▎   ┃ prompt         What is the maximum coil gain?
▎   ┃ url            https://holodeck.invalid/specs/deflector.html
▎   ┃
▎   ┃ The spec puts the maximum coil gain at 1.8.
▎
▎ ▾ jeffries · beam_status                                                    ok
▎   └ {"deck":9,"verbose":true}
▎   ┃ deck           9
▎   ┃ verbose        true
▎   ┃
▎   ┃ Deck 9 emitter array nominal.
▎
▎ ▾ Replicator                                                                ok
▎   └ tea, earl grey, hot
▎   ┃ pattern        tea, earl grey, hot
▎   ┃ quantity       1
▎   ┃
▎   ┃ Replicated 1 item.
▎
▎ ▾ Read                                                                  failed
▎   └ {"file_path": "/Users/fixture/Developer/holodeck/src/engine/co
▎   ┃ __unparsedToo… {"file_path": "/Users/fixture/Developer/holodeck/src/engin…
▎   ┃
▎   ┃ <tool_use_error>InputValidationError: Read was called with input that cou…
▎
▎ ▾ Bash                                                                  denied
▎   └ rm -rf target
▎   ┃ command        rm -rf target
▎   ┃ description    Clear the build directory
▎   ┃
▎   ┃ The user doesn't want to proceed with this tool use. The tool use was rej…
▎
▎ ▾ Bash                                                             interrupted
▎   └ cargo test -- --nocapture
▎   ┃ command        cargo test -- --nocapture
▎   ┃ description    Run the deflector tests
▎   ┃
▎   ┃ [Request interrupted by user for tool use]
▎
▎ Stopping there. One call was still in flight when the session ended.
▎
▎ ▾ Bash                                                                 pending
▎   └ cargo build --release
▎   ┃ command        cargo build --release
▎   ┃ description    Release build
