tests/snapshots/transcript__wide-glyphs-40.snap
---
source: tests/transcript.rs
expression: "rendered(WIDE, 40)"
---
▎ you
▎ ホロデッキの安全装置について説明してく
▎ ださい。特に、緊急時のオーバーライド手
▎ 順と、そのときに格納庫の扉がどう動くの
▎ かを知りたいです。🖖

▎ claude · opus-5
▎ thinking · 3 lines
▎ 安全装置は三重になっています。🛸
▎ まず主系統、つぎに補助系統、そして最後
▎ に手動のインターロックです。
▎
▎ 緊急時のオーバーライドは主系統だけを切
▎ り、格納庫の扉は別系統のままです。
▎ ▸ Read                         pending
▎   └ /Users/fixture/Developer/holodeck…

▎ you
▎ この写真の配線を見てください 👩‍🚀🔧
▎ どちらが補助系統ですか？
▎ [image · png · 300 B]

▎ claude · opus-5
▎ 左が補助系統です。🔧
▎ 右は照明で、安全装置とは無関係です。
